# NITA-bot

./: .env.sample  .gitignore  .tool-versions  LICENSE  Makefile  README.md  bot.py  docker-compose.yml  error.py  launcher.py  pyproject.toml
cogs/: meta.py  time_trial.py  utils.py
cogs/helpers/: autocomplete.py  converter.py  paginator.py
docs/: development.md
mkworld/game_data/: tracks.py
model/: core.py  time_trials.py
plotting/: __init__.py
repository/: __init__.py  repository.py
tests/: test_utils_base_model.py  test_utils_time.py
utils/: base_model.py  time.py
