[project]
name = "nita-bot"
version = "0.1.0"
description = "A discord bot for Mario Kart World"
authors = [
    {name = "Yumax-panda"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "discord-py (>=2.5.2,<3.0.0)",
    "dependency-injector (>=4.47.1,<5.0.0)",
    "typing-extensions (>=4.14.0,<5.0.0)",
    "greenlet (>=3.2.3,<4.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "aiomysql (>=0.2.0,<0.3.0)",
    "cryptography (>=45.0.4,<46.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.13"
pyright = "^1.1.401"
pytest = "^8.4.1"

[tool.ruff.lint]
# ref: https://docs.astral.sh/ruff/linter/
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.pyright]
typeCheckingMode = "basic"
include = [
    "cogs",
]
exclude = [
    "**/__pycache__",
    ".venv/",
    "mysql/"
]
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
addopts = "-v"
testpaths = [
    "tests",
]